objects/EnergySupplySustainability__c.object
<CustomObject>
    <description>Holds the Energy Supply &amp; Sustainablity</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Holds the related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Supply &amp; Sustainability</relationshipLabel>
        <relationshipName>EnergySuppliesSustainability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrentERPSystem__c</fullName>
        <description>Holds the current ERP System</description>
        <inlineHelpText>Name of current ERP, back-office, or financial system.</inlineHelpText>
        <label>Current ERP System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUtilityAuditDate__c</fullName>
        <description>Date last utility audit was completed.</description>
        <inlineHelpText>Date last utility audit was completed.</inlineHelpText>
        <label>Last Utility Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UtilityBillManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the related Utility Bill Manager</description>
        <inlineHelpText>Current utility bill manager or bill payment provider.</inlineHelpText>
        <label>Utility Bill Manager</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Energy Supplies &amp; Sustainability</relationshipLabel>
        <relationshipName>EnergySuppliesSustainability</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Energy Supply &amp; Sustainability</label>
    <nameField>
        <displayFormat>ESS-{000000}</displayFormat>
        <label>Energy  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Supplies &amp; Sustainability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>